--- a/ActivityWebsite/Views/Shared/_Layout.cshtml
+++ b/ActivityWebsite/Views/Shared/_Layout.cshtml
@@ -13,8 +13,10 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap" rel="stylesheet">
 
     @* Install css Plugin *@
-    @Styles.Render("~/plugin/bootstrap/css")
-    @Styles.Render("~/plugin/font-awesome")
+    @*@Styles.Render("~/plugin/bootstrap/css")*@
+    @*@Styles.Render("~/plugin/font-awesome")*@
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     @*Install css shared*@
     @Styles.Render("~/User/Shared/css")
